<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edtContentWrite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="top"
        android:hint="@string/content"
        android:padding="@dimen/_5dp"
        android:textColor="@color/gris4"
        android:textColorHint="@color/gris3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/btn_bookdos"
            android:drawablePadding="@dimen/_5dp"
            android:id="@+id/btnCancelDialogWrite"
            android:drawableTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:tint="@color/white" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/btn_bookdos"
            android:drawablePadding="@dimen/_5dp"
            android:drawableTint="@color/white"
            android:id="@+id/btnAceptDialogWrite"
            android:text="@string/acept"
            android:textColor="@color/white"
            android:tint="@color/white" />
    </LinearLayout>

</RelativeLayout>